# mirrorer

./: .gitignore  .pre-commit-config.yaml  README.md  infra_setup.py  pyproject.toml  repos.json  repos_to_matrix.py
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  mirrorer.yml
